spacing fix

--- a/src/stylus/templates/_list.styl
+++ b/src/stylus/templates/_list.styl
@@ -38,3 +38,5 @@
 
 .notes-page
 	padding-bottom spacing(24px)
+	border-top 1px solid #1c1c1c
+	padding-top spacing(24px)
