--- a/src/stylus/templates/_post.styl
+++ b/src/stylus/templates/_post.styl
@@ -25,7 +25,6 @@
 		width 100%
 		margin 0 auto
 		position relative
-		padding-top spacing(64px)
 
 		a
 			color var(--meta-color)
